# rohi-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: book-gh-pages.yml  ci.yml  gh-pages.yml
altruist/: Cargo.toml  README.md
altruist/src/: lib.rs
docs/: README.md  SUMMARY.md  air-quality-terminal.md  book.toml  install.md
examples/: Cargo.toml
examples/src/: lib.rs
firmwares/altruist-sensors-social/: Cargo.toml  README.md
robonomics-hal/: Cargo.toml
robonomics-hal/src/: lib.rs
rohi-hal/: Cargo.toml
rohi-hal/src/: board.rs  lib.rs  sensor.rs
rohi-hal/src/board/: altruist.rs
rohi-hal/src/sensor/: bus.rs
rohi-net/: Cargo.toml
rohi-net/src/: http.rs  lib.rs  network.rs  wifi.rs
