[workspace.package]
edition = "2024"
authors = ["Akagi Engineering <admin@akagi.dev>"]
license = "Apache-2.0"
homepage = "https://rohi.akagi.dev"
repository = "https://github.com/akagi-dev/rohi-sdk"

[workspace]
members = ["altruist", "rohi-hal", "examples"]
resolver = "2"

[workspace.dependencies]
# Local
rohi-hal = { path = "rohi-hal" }

# ESP
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }

# Embassy
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }

# Sensors drivers
sds011-rs = "0.5"
bme280 = { version = "0.5", default-features = false, features = ["async"] }

# Others
log = "0.4.21"
static_cell = { version = "2.1.0", features = ["nightly"] }
trait-variant = "0.1.2"
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
