[workspace.package]
edition = "2024"
authors = ["Akagi Engineering <admin@akagi.dev>"]
license = "Apache-2.0"
homepage = "https://rohi.akagi.dev"
repository = "https://github.com/akagi-dev/rohi-sdk"

[workspace]
members = [
  "firmwares/altruist-sensors-social",
  "rohi-hal",
  "rohi-net",
  "examples",
]
resolver = "2"

[workspace.dependencies]
# Local
rohi-hal = { path = "rohi-hal" }
rohi-net = { path = "rohi-net" }

# ESP
esp-backtrace = { version = "0.15.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32c3", "unstable"] }
esp-wifi = { version = "0.12.0", features = ["esp32c3", "wifi", "log"] }
esp-alloc = { version = "0.6", features = ["nightly"] }
esp-println = { version = "0.13.0", features = ["esp32c3", "log"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32c3"] }

# Embassy
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-net = { version = "0.6.0", features = ["tcp", "udp", "mdns", "dhcpv4"] }

# Edge
edge-nal-embassy = "0.5"
edge-nal = "0.5"
edge-http = "0.5"
edge-dhcp = "0.5"

# Sensors drivers
sds011-rs = "0.5"
bme280 = { version = "0.5", default-features = false, features = ["async"] }

# Others
log = "0.4.21"
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
