[workspace.package]
rust-version = "1.89"
edition = "2024"
authors = ["Akagi Engineering <admin@akagi.dev>"]
license = "Apache-2.0"
homepage = "https://rohi.akagi.dev"
repository = "https://github.com/akagi-dev/rohi-sdk"

[workspace]
members = [
  "firmwares/altruist-sensors-social",
  "rohi-hal",
  "rohi-net",
  "examples",
]
resolver = "2"

[workspace.dependencies]
# Local
rohi-hal = { path = "rohi-hal" }
rohi-net = { path = "rohi-net" }

# ESP
esp-hal = { version = "=1.0.0-rc.1", features = ["unstable", "esp32c3"] }
esp-rtos = { version = "0.1.1", features = [
  "esp-radio",
  "esp-alloc",
  "embassy",
  "esp32c3",
] }
esp-alloc = "0.9.0"
esp-radio = { version = "0.16.0", features = [
  "wifi",
  "esp-alloc",
  "unstable",
  "esp32c3",
] }
esp-println = { version = "0.16.0", features = ["log-04", "esp32c3"] }
esp-backtrace = { version = "0.18.0", features = [
  "panic-handler",
  "println",
  "esp32c3",
] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32c3"] }

# Embedded
embedded-io = "0.7.1"
embedded-io-async = "0.7.1"
#embedded-devices = { version = "0.10.2", features = ["bosch-bmp280", "log"] }

# Embassy
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-net = { version = "0.7.0", features = ["tcp", "udp", "mdns", "dhcpv4"] }

# Edge
edge-nal-embassy = "0.6"
edge-nal = "0.5"
edge-http = "0.6.1"
edge-dhcp = "0.6"

# Sensors drivers
sds011-rs = "0.5"

# Others
log = "0.4.21"
heapless = "0.9.0"
static_cell = "2.1.0"
critical-section = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
