[[bin]]
name = "example-altruist-sensor-pm25"
path = "./src/bin/altruist-sensor-pm25.rs"

#[[bin]]
#name = "example-altruist-sensor-temp"
#path = "./src/bin/altruist-sensor-temp.rs"

#[[bin]]
#name = "example-altruist-sensor-press"
#path = "./src/bin/altruist-sensor-press.rs"

[[bin]]
name = "example-altruist-ap-dhcp"
path = "./src/bin/altruist-ap-dhcp.rs"

[package]
name = "rohi-examples"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rohi-hal = { workspace = true }
rohi-net = { workspace = true }
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true }
esp-hal = { workspace = true }
esp-println = { workspace = true }
esp-rtos = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
static_cell = { workspace = true }
critical-section = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
