[[bin]]
name = "example-altruist-sensor"
path = "./src/bin/altruist-sensor.rs"

[[bin]]
name = "example-network-ap-dhcp"
path = "./src/bin/network-ap-dhcp.rs"

[package]
name = "rohi-examples"
version = "0.0.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
rohi-hal = { workspace = true }
rohi-net = { workspace = true }
esp-alloc = { workspace = true }
esp-backtrace = { workspace = true }
esp-hal = { workspace = true }
esp-println = { workspace = true }
esp-rtos = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
static_cell = { workspace = true }
critical-section = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
