[package]
name = "rohi-hal"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Robonomics Open Hardware Abstraction Layer"

[package.metadata.docs.rs]
targets = ["riscv32imc-unknown-none-elf"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = { workspace = true }
esp-hal = { workspace = true }
esp-hal-embassy = { workspace = true }
embassy-time = { workspace = true }
trait-variant = { workspace = true }
sds011-rs = { workspace = true }
bme280 = { workspace = true }
