[package]
name = "rohi-net"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Network layer for Robonomics Open Hardware Initiative."

[package.metadata.docs.rs]
targets = ["riscv32imc-unknown-none-elf"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
log = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
esp-hal = { workspace = true }
esp-wifi = { workspace = true }
esp-alloc = { workspace = true }
embassy-net = { workspace = true }
embassy-time = { workspace = true }
embassy-executor = { workspace = true }
edge-nal = { workspace = true }
edge-nal-embassy = { workspace = true }
edge-http = { workspace = true }
edge-dhcp = { workspace = true }
